--- a/caravan/style.css
+++ b/caravan/style.css
@@ -222,3 +222,89 @@ footer{
 .footer-text{
   color: #fff;
 }
+
+.social i {
+  color: black;
+}
+
+/* タブレット横置きサイズ
+@media screen and (max-width:1024px){
+  .social i {
+    color: green;
+  }
+}
+
+タブレット縦置きサイズ
+@media screen and (max-width:768px) {
+  .social i{
+    color: red;
+  }
+} */
+
+/* スマートフォンサイズ */
+@media screen and (max-width:425px) {
+  header {
+    width: 100%;
+    display: block;
+  }
+
+  .nav-list {
+    width: 100%;
+  }
+
+  .nav-list-item{
+    width: 100%;
+    margin: 0 0 10px 0;
+  }
+
+  .social{
+    display: none;
+  }
+
+  .main-visual-content{
+    width: 100%;
+  }
+
+  .main{
+    display: block;
+    width: 100%;
+  }
+
+  .blog{
+    width: 100%;
+    margin: 0;
+  }
+
+  .blog-box {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+
+  .blog-image {
+    width: 49%;
+  }
+
+  .blog-text {
+    width: 49%;
+    padding-top: 5px;
+  }
+
+  .sidebar {
+    width: 100%;
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+
+  .instagram-box {
+    width: 48%;
+    padding-top: 48%;
+  }
+
+  .instagram-box:nth-child(odd) {
+    margin-right: 4%;
+  }
+
+  .pagination {
+    margin-bottom: 50px;
+  }
+}
